--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ h1{
 }
 section{
     display:flex;
+    margin-bottom: 120px;;
 }
 .half-width{
     width:50%;
-    padding-left: 20px;
+    padding-left: 2%;
+    
 }
 .half-width img{
     width:85%;
@@ -30,4 +32,12 @@ section{
 .bg1{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.spacex{
+    padding-right: 120px;
+}
+.dream{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
 }
