--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body{
     font-family: 'Poppins', sans-serif;
     margin:0;
 }
+p{color:grey;}
 h1{
-    font-size: 50px;
+    font-size: 40px;
 }
 .spanx{
     color: orange;
@@ -17,7 +18,7 @@ h1{
     border-radius: 5px;
 
 }
-section{
+.flexi{
     display:flex;
     margin-bottom: 120px;;
 }
@@ -40,4 +41,34 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position:right;
+}
+.boxed{
+    margin-right:5%;
+    margin-left: 5%;
+    width: 45%;
+    border-radius:5px;
+    padding: 10px;
+    box-shadow: 5px 5px 40px gray;
+}
+.orangy{
+    color:orange;
+}
+.exp{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.warm-border{
+    border-left:5px solid;
+  border-image: linear-gradient(orange, tomato)1;
+  
+}
+.cool-border{
+    border-left:5px solid;
+  border-image: linear-gradient(darkblue, skyblue)1;
+}
+footer{
+    text-align: center;
+    color:gray;
+    
 }
